k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-scanner
  labels:
    app: content-scanner
spec:
  type: ClusterIP
  selector:
    app: content-scanner
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
